fix spacing problem

--- a/src/sign-in.css
+++ b/src/sign-in.css
@@ -102,11 +102,13 @@
   .image-part, .main-part {
     width: 100%;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
   }
   .image-part {
     width: 80%;
-    height: 97.5%;
-    margin: 8px;
+    height: 100%;
   }
   
   .image-part img{
@@ -114,10 +116,11 @@
     height: 100%;
     object-fit: cover;
     object-position: center;
+    padding: 8px;
   }
   
   .main-part {
-    padding: 90px 100px;
+    padding: 0px 90px;
   }
   
   .form-group {
@@ -164,21 +167,21 @@
   
   @media only screen and (max-width: 1200px) {
     .main-part {
-      padding: 30px 50px;
+      padding: 0px 50px;
     }
-    .form-wrapper{
+    /* .form-wrapper{
         width: 86%;
-    }
+    } */
     
   }
   
   @media only screen and (max-width: 1024px) {
     .main-part {
-      padding: 20px 40px;
+      padding: 0px 40px;
     }
   
     .auth-card {
-      height: unset;
+      /* height: unset; */
       flex-direction: column;
     }
     
@@ -189,8 +192,12 @@
       height: 250px;
     }
     .form-wrapper{
-        width: 86%;
+        width: 85%;
     }
+    .image-part {
+      visibility: hidden;
+      height: 0px;
+  }
     
   }
   
@@ -204,6 +211,6 @@
         height: 0px;
     }
     .form-wrapper{
-        width: 76%;
+        width: 75%;
     }
   }
